--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-toastify": "^11.0.5",
     "reactstrap": "^9.2.3",
     "simplebar-react": "^3.3.1",
+    "sweetalert": "^2.1.2",
     "yup": "^1.6.1"
   },
   "devDependencies": {
