--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://demirgazihan.github.io/KoleksiyonerF",
   "name": "koleksiyoner",
   "private": true,
   "version": "0.0.0",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "ph-pages -d build"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
@@ -37,6 +40,7 @@
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "sass-embedded": "^1.89.0",
     "typescript": "~5.8.3",
