--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "reactstrap": "^9.2.3",
     "simplebar-react": "^3.3.1",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.22.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
